# mynote

./: .gitignore  电子元器件模块制作.csv  电源模块.csv
debian/: WM虚拟机中的debian初始化.md  docker.md  hyper-v安装debian.md  linux_install.sh  linux指令入门学习笔记.md  linux指令继续学习.md  ltsipce仿真学习.md  mdbook使用.md  rust_install  ssh_github.md  wsl install.md  wsl usb.md  双系统debian初始化.md  嵌入式开发环境配置.md
ltspice/: 0.3~3.0V电压转4~20mA电流(环路供电).asc  0.3~3.0V电压转4~20mA电流(环路供电).md  ltspice_01.asc  ltspice_02.asc  ltspice_03.asc  ltspice_04.asc  ltspice_05.asc  ltspice_06.asc  ltspice_06.raw  ltspice_07.asc  ltspice_08.asc  ltspice_09.asc  ltspice_10.asc  wave.txt
制作板子/: README.md  ad19_gerber.md
基于学习/: DCDC.md  EDA_gerber_compare.md  TI参考设计-工业-自动化-传感器.md  你好,放大器.md  唐老师DCDC开关电源PCB设计实战(1~17)buck.md  唐老师讲运算放大器.md  电源大师.md  立创EDA+AD PCB设计入门+单片机最小系统.md  笔记精要.md  运放大师.md
基于实践/: Michael_AU_rule.md  kicad_rule.md  工作要点记录.md  没有网络的debian配置.md  热转印.md  硬件学习路径.md  硬件电路PCB设计审查.md  购买记录.md
完成的代码/rust/delete_empty_folder_rust/: Cargo.toml
完成的代码/rust/delete_empty_folder_rust/src/: main.rs
完成的代码/rust/kicad_ad2jlc_gerber_rust/: Cargo.toml  build.rs
完成的代码/rust/kicad_ad2jlc_gerber_rust/src/: main.rs
完成的代码/rust/kill_baidu_rust/: Cargo.toml
完成的代码/rust/kill_baidu_rust/src/: main.rs
嵌入式代码日志/: debug_SPI_发现读取寄存器需要两次.md  振动传感器README.md
数据/: NTPCB.csv  buy.csv  一些游戏.md  唐老师.csv  老男人 oldmanemu.net.md  软件安装资源.md
无用笔记/: AD10.md  Cadence17.4快速上手学习笔记.md  kicad.md  劳动法需要学习.md
电子元器件/:  工具购买记录.csv  电子元器件-需要购买的.md  电子元器件库存(盘).csv  电子元器件库存.csv  电子模块购买.md
硬件犯错日志/: 电源供电不完整导致SPI通讯失败.md  研发时先调试电源_隔离未调试好电源.md  研发通讯时应多使用逻辑分析仪.md  选型封装难以焊接导致研发失败.md
(+14 files in other folders)
