[package]
name = "delete_empty_folder"
version = "0.1.0"
edition = "2021"

# 设置构建目标为 Windows x64
[build]
target = "x86_64-pc-windows-msvc"

# 依赖项
[dependencies]
walkdir = "2.3"  # 用于遍历目录
winapi = { version = "0.3", features = ["processenv", "winuser", "winbase"] }

# 优化设置
[profile.release]
lto = true          # 启用链接时优化
opt-level = "z"     # 优化级别为最小体积
strip = true        # 去除调试信息


[build-dependencies]
winres = "0.1"