[package]
name = "file"  # Or whatever your project name is
version = "0.1.0"
edition = "2021"  # Or your preferred edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
zip = { version = "0.6", features = ["deflate"] } # Add the deflate feature
walkdir = "2"
lazy_static = "1.4.0"
chrono = "0.4.19"

# 优化设置
[profile.release]
lto = true          # 启用链接时优化
opt-level = "z"     # 优化级别为最小体积
strip = true        # 去除调试信息


[build-dependencies]
winres = "0.1"